# apps/credential-showcase-api-server/src/database/repositories/ShowcaseRepository.ts
@@ -1,9 +1,11 @@
 import { inArray, eq } from 'drizzle-orm'
 import { Service } from 'typedi'
+import { BadRequestError } from 'routing-controllers'
 import DatabaseService from '../../services/DatabaseService'
 import CredentialDefinitionRepository from './CredentialDefinitionRepository'
 import PersonaRepository from './PersonaRepository'
 import ScenarioRepository from './ScenarioRepository'
+import AssetRepository from './AssetRepository'
 import { sortSteps } from '../../utils/sortUtils'
 import { NotFoundError } from '../../errors'
 import {
@@ -16,8 +18,6 @@ import {
   showcasesToScenarios,
 } from '../schema'
 import { Showcase, NewShowcase, RepositoryDefinition } from '../../types'
-import AssetRepository from './AssetRepository'
-import { BadRequestError } from 'routing-controllers'
 
 @Service()
 class ShowcaseRepository implements RepositoryDefinition<Showcase, NewShowcase> {
@@ -117,7 +117,15 @@ class ShowcaseRepository implements RepositoryDefinition<Showcase, NewShowcase> 
                   },
                 },
               },
-              css: true,
+              css: {
+                with: {
+                  cs: {
+                    with: {
+                      attributes: true,
+                    },
+                  },
+                },
+              },
               logo: true,
             },
           },
@@ -198,7 +206,7 @@ class ShowcaseRepository implements RepositoryDefinition<Showcase, NewShowcase> 
             issuer: {
               ...(scenario.issuer as any), // TODO check this typing issue at a later point in time
               credentialDefinitions: scenario.issuer!.cds.map((credentialDefinition) => credentialDefinition.cd),
-              credentialSchemas: scenario.issuer!.css.map((credentialSchema) => credentialSchema.credentialSchema),
+              credentialSchemas: scenario.issuer!.css.map((credentialSchema) => credentialSchema.cs),
             },
           }),
           personas: scenario.personas.map((item) => item.persona),
@@ -313,6 +321,15 @@ class ShowcaseRepository implements RepositoryDefinition<Showcase, NewShowcase> 
                   },
                 },
               },
+              css: {
+                with: {
+                  cs: {
+                    with: {
+                      attributes: true,
+                    },
+                  },
+                },
+              },
               logo: true,
             },
           },
@@ -393,6 +410,7 @@ class ShowcaseRepository implements RepositoryDefinition<Showcase, NewShowcase> 
             issuer: {
               ...(scenario.issuer as any), // TODO check this typing issue at a later point in time
               credentialDefinitions: scenario.issuer!.cds.map((credentialDefinition) => credentialDefinition.cd),
+              credentialSchemas: scenario.issuer!.css.map((credentialSchema) => credentialSchema.cs),
             },
           }),
           personas: scenario.personas.map((item) => item.persona),
@@ -457,6 +475,16 @@ class ShowcaseRepository implements RepositoryDefinition<Showcase, NewShowcase> 
                             },
                             representations: true,
                             revocation: true,
+                          },
+                        },
+
+                      },
+                    },
+                    css: {
+                      with: {
+                        cs: {
+                          with: {
+                            attributes: true,
                           },
                         },
                       },
@@ -532,13 +560,14 @@ class ShowcaseRepository implements RepositoryDefinition<Showcase, NewShowcase> 
           issuer: {
             ...(scenario.scenario.issuer as any), // TODO check this typing issue at a later point in time
             credentialDefinitions: scenario.scenario.issuer!.cds.map((credentialDefinition) => credentialDefinition.cd),
+            credentialSchemas: scenario.scenario.issuer!.css.map((credentialSchema: any) => credentialSchema.cs),
           },
         }),
         personas: scenario.scenario.personas.map((item) => item.persona),
       })),
       credentialDefinitions: result.credentialDefinitions.map((item: any) => ({
-        ...item,
-        credentialSchema: item.cs,
+        ...item.credentialDefinition,
+        credentialSchema: item.credentialDefinition.cs,
       })),
       personas: result.personas.map((item) => item.persona),
     }
@@ -593,6 +622,15 @@ class ShowcaseRepository implements RepositoryDefinition<Showcase, NewShowcase> 
                             },
                             representations: true,
                             revocation: true,
+                          },
+                        },
+                      },
+                    },
+                    css: {
+                      with: {
+                        cs: {
+                          with: {
+                            attributes: true,
                           },
                         },
                       },
@@ -664,11 +702,15 @@ class ShowcaseRepository implements RepositoryDefinition<Showcase, NewShowcase> 
           issuer: {
             ...(scenario.scenario.issuer as any), // TODO check this typing issue at a later point in time
             credentialDefinitions: scenario.scenario.issuer!.cds.map((credentialDefinition: any) => credentialDefinition.cd),
+            credentialSchemas: scenario.scenario.issuer!.css.map((credentialSchema: any) => credentialSchema.cs),
           },
         }),
         personas: scenario.scenario.personas.map((item: any) => item.persona), // TODO check this typing issue at a later point in time
       })),
-      credentialDefinitions: showcase.credentialDefinitions.map((item: any) => item.credentialDefinition), // TODO check this typing issue at a later point in time
+      credentialDefinitions: showcase.credentialDefinitions.map((item: any) => ({ // TODO check this typing issue at a later point in time
+        ...item.credentialDefinition,
+        credentialSchema: item.credentialDefinition.cs,
+      })),
       personas: showcase.personas.map((item: any) => item.persona), // TODO check this typing issue at a later point in time
     }))
   }
